# kson-rs

./: .env  .gitignore  Cargo.toml  LICENSE  Main.cfg  README.md  i18n.toml  mise.toml  structure.d2  tlconfig.lua
.github/workflows/: apk.yml  bundle.yml  game_msi.yml  rust.yml
editor/: .gitignore  Cargo.toml  LICENSE  README.md  i18n.toml
editor/i18n/en/: kson_editor.ftl
editor/i18n/sv/: kson_editor.ftl
editor/src/: action_stack.rs  camera_widget.rs  chart_camera.rs  chart_editor.rs  effect_editor.rs  effect_panel.rs  i18n.rs  lib.rs  main.rs  param_input.rs  utils.rs
editor/src/assets/: mod.rs
editor/src/assets/shaders/: button_frag.glsl  button_vert.glsl  color_mesh_frag.glsl  laser_frag.glsl  laser_vert.glsl
editor/src/tools/: bpm_ts.rs  buttons.rs  camera.rs  laser.rs  mod.rs
examples/: ksh2kson.rs  kson_stats.rs
game/: .env  .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  manifest.yaml
game/func_gen/: convert.nu  game.txt  gfx.txt  http.txt
game/rusc_database/: Cargo.toml  maps.db
game/rusc_database/migrations/: 20230519124929_setup.sql
game/rusc_database/src/: lib.rs
game/skin_config_update/: index.js
game/skins/Default/: config-definitions.json  meta.json
game/skins/Default/backgrounds/arrow/: bg.fs
game/skins/Default/backgrounds/fallback/: bg.fs
game/skins/Default/backgrounds/sakura/: bg.lua
game/skins/Default/backgrounds/snow/: bg.lua
game/skins/Default/scripts/: collectiondialog.lua  gameplay.lua  multiplayerscreen.lua  result.lua  titlescreen.lua
game/skins/Default/scripts/songselect/: background.lua  chalwheel.lua  filterwheel.lua  songwheel.lua
game/skins/Default/shaders/: background.vs  blackLaser.fs  blackLaser.vs  button.fs  button.vs  diffFrame.fs  diffFrame.vs  font.fs  foreground.fs  gauge.fs  gauge.vs  guiButton.fs  guiButton.gs  guiButton.vs  guiColor.fs  guiGraph.fs  guiGraph.vs  guiTex.fs  guiTex.vs  holdbutton.fs  holdbutton.vs  laser.fs  laser.vs  overlay.fs  particle.fs  particle.gs  particle.vs  progressBar.fs  progressBar.vs  songSelBack.fs  songSelBack.vs  sprite.fs  sprite.vs  track.fs  track.vs  track.wgsl  trackCover.fs
game/skins/Default/shaders/examples/foreground/: scanlines.fs
game/src/: animation.rs  app.rs  async_service.rs  audio.rs  audio_test.rs  button_codes.rs  companion_interface.rs  config.rs  game.rs  game_background.rs  game_camera.rs  game_data.rs  game_main.rs  help.rs  inox.rs  input_state.rs  installer.rs  ir.rs  lib.rs  lighting.rs  lua_http.rs  lua_service.rs  main.rs  main_menu.rs  multiplayer.rs  results.rs  scene.rs  settings_dialog.rs  shaded_mesh.rs  skin_settings.rs  songselect.rs  take_duration_fade.rs  touch.rs  transition.rs  util.rs  vg_ui.rs  window.rs  worker_service.rs
game/src/config/: migrations.rs
game/src/game/: background.rs  camera.rs  chart_view.rs  gauge.rs  graphics.rs  lua_data.rs
game/src/settings_screen/: controller_binding.rs  lighting.rs  mod.rs  skin_select.rs
game/src/song_provider/: files.rs  mod.rs  nautica.rs
game/src/songselect/: favourite_dialog.rs  song_collection.rs
game/src/sources/: biquad.rs  bitcrush.rs  effected_part.rs  flanger.rs  gate.rs  mod.rs  owned_source.rs  phaser.rs  pitch_shift.rs  re_trigger.rs  side_chain.rs  tape_stop.rs  wobble.rs
game/src/static_assets/: fullscreen.vs
game/src/test_scenes/: camera_test.rs  mod.rs
game/src/util/: beat_pulser.rs  laser_navigation.rs
game/wix/: fonts.wxs  main.wxs  skins.wxs
game_companion/: bun.lockb  package.json  tsconfig.json
game_companion/src/: App.tsx  SongSelect.tsx
game_companion/src/schemas/: client.json  server.json  types.ts
i18n/en/: kson_editor.ftl
i18n/sv/: kson_editor.ftl
kson/: Cargo.toml  README.md
kson-audio/: Cargo.toml
kson-audio/src/: biquad.rs  lib.rs
kson-effect-param-macro/: Cargo.toml
kson-effect-param-macro/src/: lib.rs
kson-music-playback/: .gitignore  Cargo.toml
kson-music-playback/src/: lib.rs
kson-rodio-sources/: Cargo.toml
kson-rodio-sources/src/: biquad.rs  bitcrush.rs  flanger.rs  gate.rs  lib.rs  mix_source.rs  noise.rs  owned_source.rs  pitch_shift_passthrough.rs  re_trigger.rs  side_chain.rs  takeable_source.rs  tape_stop.rs  triangle.rs  wobble.rs
kson/examples/: ksh2kson.rs  kson_stats.rs
kson/src/: camera.rs  effects.rs  graph.rs  ksh.rs  lib.rs  overlaps.rs  parameter.rs  score_ticks.rs  tests.rs  vox.rs
kson/src/tests/: serializer.rs
kson/src/tests/assets/: Gram_ch.ksh  Gram_ex.json  Gram_ex.ksh  Gram_in.ksh  Gram_lt.ksh
multiplayer-protocol/: Cargo.toml
multiplayer-protocol/proto/: Client.proto  Server.proto  Types.proto
multiplayer-protocol/src/: lib.rs  messages.rs
rusc_database/: .env  Cargo.toml  maps.db
rusc_database/migrations/2022-12-15-210556_initial/: down.sql  up.sql
rusc_database/src/: lib.rs  models.rs  schema.rs
scripts/: challengeresult.lua  gameplay.lua  replace.regex  songwheel.lua  songwheel.tl  titlescreen.lua  titlescreen.tl  transition.tl
scripts/songselect/: songwheel.lua
skins/Default/: config-definitions.json
skins/Default/scripts/: downloadscreen.lua
skins/Default/shaders/: guiGraph.vs
src/: action_stack.rs  animation.rs  audio.rs  audio_test.rs  button_codes.rs  camera.rs  camera_widget.rs  chart.rs  chart_camera.rs  chart_editor.rs  config.rs  custom_loop.rs  dsp.rs  effects.rs  game.rs  game_camera.rs  game_data.rs  game_main.rs  graph.rs  gui.rs  help.rs  i18n.rs  ksh.rs  lib.rs  main.rs  main_menu.rs  material.rs  owned_source.rs  parameter.rs  playback.rs  results.rs  scene.rs  score_ticks.rs  shaded_mesh.rs  skin_settings.rs  songselect.rs  take_duration_fade.rs  tools.rs  transition.rs  utils.rs  (+3 more)
src/assets/: mod.rs
src/assets/shaders/: button_frag.glsl  button_vert.glsl  holdbutton_frag.glsl  lane_light_frag.glsl  laser_frag.glsl  laser_vert.glsl  track_frag.glsl
src/song_provider/: files.rs  mod.rs  nautica.rs
src/sources/: biquad.rs  bitcrush.rs  effected_part.rs  flanger.rs  mod.rs  noise.rs  triangle.rs  wobble.rs
src/tools/: bpm_ts.rs  buttons.rs  camera.rs  laser.rs  mod.rs
