[package]
name = "rusc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
femtovg = { version='*', default-features = false, features = ["image", "image-loading"] }
image = { version = "0.24.0", default-features = false, features = [
    "jpeg",
    "png",
] }
gilrs = "0.10.0"
hecs = { version = "0.9.0", features = ["macros", "lazy_static"] }
#kson = {path = "../kson-rs"}
#kson-audio = {path = "../kson-rs/kson-audio"}
kson ={git = "https://github.com/Drewol/kson-rs.git"}
kson-audio = {git = "https://github.com/Drewol/kson-rs.git"}
rodio = {version = "0.17.1", default-features = false, features = ['symphonia-wav', "flac", "vorbis", "mp3"]}
tealr = { git = "https://github.com/lenscas/tealr.git", features = ["mlua", "tealr_derive", "mlua_lua54", "mlua_vendored", "mlua_serialize"] }
three-d = {version = "0.15.0"}
anyhow = "1"
bitflags = "1"
generational-arena = "*"
once_cell = "1"
walkdir = "*"
rfd = "*"
log = "*"
simple_logger = "4.0.0"
puffin = "0.14.0"
puffin_http = "0.11.0"
uuid = { version = "1.2.2", features = ["serde"] }
poll-promise = { git = "https://github.com/EmbarkStudios/poll-promise", features = ["smol"]}
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
ureq = { version = "2.6.2", features = ["json", "native-tls"] }
three-d-asset = { version = "0.5.0", features = ["image", "png", "jpeg", "tga", "tiff"] }
directories = "4.0.1"
zip = "0.6.4"
rayon = "1.7.0"
puffin_egui = "0.20.0"
serde_json = "1.0.96"
game-loop = { version = "*", features = ["winit"] }
glutin = "0.30.7"
glutin-winit = "0.3.0"
glow = "0.12.1"
raw-window-handle = "0.5.2"
egui = "0.21.0"
egui_glow = { version = "0.21.0", features = ["winit"] }
rusc_database = {path = "./rusc_database"}
itertools = "0.10.5"
kson-music-playback = {git = "https://github.com/Drewol/kson-editor.git"}

[profile.release]
debug = true

[workspace]
members = ["rusc_database", "."]
