[workspace]
members = [
    "kson-effect-param-macro",
    "kson",
    "kson-music-playback",
    "editor",
    "game",
    "game/rusc_database",
    "kson-rodio-sources",
]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
puffin = "0.19"
puffin_http = "0.16.0"
egui = "0.27"
emath = "0.27"
egui_glow = "0.27"
eframe = { version = "0.27", features = ["persistence"] }
simple_logger = "4.0.0"
image = { version = "0.25", default_features = false, features = [
    "png",
    "jpeg",
] }
serde_json = "1"
rodio = { version = "0", default-features = false, features = [
    'symphonia-wav',
    "flac",
    "vorbis",
    "mp3",
] }
anyhow = "1"
rand = "0.8.5"
log = "*"
kson_rodio_sources = { path = "../kson-rodio-sources" }
itertools = "0.12.1"
