[package]
name="kson-editor"
version="0.1.0"
edition = "2018"
authors = ["Emil Draws <emildraws@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.3.1"
libmath = "0.2.1"
puffin = "0.13"
puffin_http = "0.10"
rodio = { version = "0.17.1" }
serde_cbor = "0.11.1"
kson = { path = "../kson" }
kson-audio = { path = "../kson-audio" }
directories-next = "2.0.0"
nfd = { git = "https://github.com/SpaceManiac/nfd-rs.git", branch = "zenity" }
anyhow = "1"
log = "0.4.14"
env_logger = "0.9"
emath = "0.18"
glam = "0.20"
once_cell = "1.10.0"
eframe = {version = "0.18", features = ["persistence"]}
egui_glow = "0.18.1"
image = {version ="0.24", default_features = false, features = ["png"]}
bytemuck = "1.9.1"
tracing = {version = "0.1.34", features = ["log-always"]}
i18n-embed-fl = "0.6.4"
i18n-embed = { version = "0.13.4", features = ["fluent-system"] }
rust-embed = "6.4.1"
kson-music-playback = {path = "../kson-music-playback"}
[features]
profiling = ["eframe/puffin"]

