[package]
name = "kson-editor"
version = "0.1.0"
edition = "2021"
authors = ["Emil Draws <emildraws@gmail.com>"]

[lib]
crate-type = ["lib"]

[dependencies]
egui_glow = { workspace = true }
puffin = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
emath = { workspace = true }
eframe = { workspace = true }
serde_json = { workspace = true }
rodio = { workspace = true }
anyhow = { workspace = true }
simple_logger = { workspace = true }
puffin_http = { workspace = true }
regex = "1.3.1"
libmath = "0.2.1"
serde_cbor = "0.11.1"
kson = { path = "../kson" }
directories-next = "2.0.0"
nfd = { git = "https://github.com/SpaceManiac/nfd-rs.git", branch = "zenity" }
log = "0.4.14"
glam = "0.29"
once_cell = "1.10.0"
bytemuck = "1.16.0"
tracing = { version = "0.1.34", features = ["log-always"] }
i18n-embed-fl = "0.8.0"
i18n-embed = { version = "0.14.1", features = ["fluent-system"] }
rust-embed = "8.4.0"
kson-music-playback = { path = "../kson-music-playback" }

[dependencies.unic-langid]
features = ["serde"]
version = "*"

[features]
default_features = []
profiling = []
