[package]
name = "rusc"
version = "0.1.0"
edition = "2021"
authors = ["Drewol"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rusc"

[[bin]]
name = "kson-editor"

[dependencies]
egui_glow = { workspace = true, features = ["winit"] }
puffin = { workspace = true }
puffin_http = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
emath = { workspace = true }
serde_json = { workspace = true }
rodio = { workspace = true }
anyhow = { workspace = true }
egui = { workspace = true }
rand = { workspace = true }

egui_plot = "0.27"
femtovg = { git = 'https://github.com/Drewol/femtovg', branch = "VerbVisibility", default-features = false, features = [
    "image",
    "image-loading",
] }

gilrs = { version = "0.10.0", features = ["serde-serialize"] }
kson = { path = "../kson" }
kson-rodio-sources = { path = "../kson-rodio-sources" }

tealr = { version = "0.9.1", features = [
    "mlua",
    "derive",
    "mlua_lua52",
    "mlua_vendored",
    "mlua_serialize",
] }
three-d = { git = "https://github.com/Drewol/three-d" }
bitflags = "1"
once_cell = "1"
walkdir = "*"
rfd = "*"
log = { workspace = true }
simple_logger = { workspace = true }
uuid = { version = "1.2.2", features = ["serde"] }
poll-promise = { git = "https://github.com/EmbarkStudios/poll-promise", features = [
    "tokio",
] }
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
toml = "0.8.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
three-d-asset = { version = "0.6.0", features = [
    "image",
    "png",
    "jpeg",
    "tga",
    "tiff",
] }
directories = "5.0.1"
zip = "1.2.0"
game-loop = { git = "https://github.com/Drewol/game-loop.git", features = [
    "winit",
] }
glutin = "0.31.2"
glutin-winit = "0.4"
glow = "0.13"
raw-window-handle = "0.5.2"
rusc_database = { path = "./rusc_database" }
itertools = { workspace = true }
kson-music-playback = { path = "../kson-music-playback" }
clap = { version = "4.3.5", features = ["derive"] }
egui_inspect = { git = 'https://github.com/Drewol/egui_inspect.git' }
sha1_smol = "1.0.0"
futures = "0.3.28"
num_cpus = "1.16.0"
encoding = "0.2.33"
kson-editor = { path = "../editor" }
serde_with = "3.8.1"
more-di = { version = "3.1.0", features = ["async"] }
bus = "2.4.1"

[dependencies.winit]
version = "0.30"
features = ["serde"]

[target.'cfg(unix)'.dependencies]
openssl = { version = "^0.10", features = ["vendored"] }
