[package]
name = "rusc"
version = "0.1.0"
edition = "2021"
authors = ["Drewol"]
description = "Game inspired by Sound Voltex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rusc"

[[bin]]
name = "kson-editor"


[dependencies]
puffin = { workspace = true }
puffin_http = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
emath = { git = "https://github.com/emilk/egui" }
serde_json = { workspace = true }
rodio = { workspace = true }
anyhow = { workspace = true }
egui = { git = "https://github.com/emilk/egui" }
egui-winit = { git = "https://github.com/emilk/egui" }
rand = { workspace = true }

egui_plot = "0.29"
egui-wgpu = { git = "https://github.com/emilk/egui", features = ["winit"] }
femtovg = { version = "0.11", default-features = false, features = [
    "wgpu",
    "image",
    "image-loading",
] }

wgpu = { version = "23", features = ["glsl", "naga-ir"] }
glam = "0.29"
encase = "*"

gilrs = { version = "0.10.0", features = ["serde-serialize"] }
kson = { path = "../kson" }
kson-rodio-sources = { path = "../kson-rodio-sources" }

tealr = { git = "https://github.com/Drewol/tealr.git", branch = "nil-option", features = [
    "mlua",
    "derive",
    "mlua_lua52",
    "mlua_vendored",
    "mlua_serialize",
] }
bitflags = "1"
once_cell = "1"
walkdir = "*"
rfd = "*"
log = { workspace = true }
uuid = { version = "1.2.2", features = ["serde"] }
poll-promise = { git = "https://github.com/EmbarkStudios/poll-promise", features = [
    "tokio",
] }
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
toml = "0.8.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
directories = "5.0.1"
zip = "2"

raw-window-handle = "0.5.2"
rusc_database = { path = "./rusc_database" }
itertools = { workspace = true }
kson-music-playback = { path = "../kson-music-playback" }
clap = { version = "4.3.5", features = ["derive"] }
egui_inspect = { git = 'https://github.com/Drewol/egui_inspect.git' }
sha1_smol = "1.0.0"
futures = "0.3.28"
num_cpus = "1.16.0"
encoding = "0.2.33"
kson-editor = { path = "../editor" }
serde_with = "3.8.1"
more-di = { version = "3.1.0", features = ["async"] }
bus = "2.4.1"
luals-gen-tealr = { git = "https://github.com/Drewol/luals-gen.git" }
luals-gen = { git = "https://github.com/Drewol/luals-gen.git" }
tokio-tungstenite = "0.24.0"
schemars = "0.8.21"
futures-util = "0.3.30"
specta = { version = "1.0.5", features = ["export"] }
statrs = "0.17.1"
chrono = { version = "0.4.38", default-features = false, features = [
    "alloc",
    "clock",
    "now",
    "std",
] }
log4rs = { version = "1.3.0", features = [
    "console_appender",
    "file_appender",
    "pattern_encoder",
    "console_writer",
], default-features = false }
palette = "0.7.6"
flume = "0.11.1"

[dependencies.winit]
version = "0.30.5"
features = ["serde"]

[target.'cfg(unix)'.dependencies]
openssl = { version = "^0.10", features = ["vendored"] }

[lints.clippy]
arc_with_non_send_sync = "allow"

[package.metadata.bundle]
name = "USC"
identifier = "dev.kson.usc"
resources = ["game/skins", "game/fonts"]

[package.metadata.bundle.bin.kson-editor]
name = "KSON-Editor"
identifier = "dev.kson.editor"

[features]
default = []
portable = []
