[package]
name = "rusc"
version = "0.1.0"
edition = "2021"
authors = ["Drewol"]
description = "Game inspired by Sound Voltex"
default-run = "rusc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rusc"

[[bin]]
name = "kson-editor"


[lib]
name = "rusc"
crate-type = ["cdylib"]

[dependencies]
egui_glow = { workspace = true, features = ["winit"] }
puffin = { workspace = true }
puffin_http = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
emath = { workspace = true }
serde_json = { workspace = true }
rodio = { workspace = true }
anyhow = { workspace = true }
egui = { workspace = true }
rand = { workspace = true }

egui_plot = "0.31"
femtovg = { git = 'https://github.com/Drewol/femtovg', branch = "cache-experiment-1", default-features = false, features = [
    "image",
    "image-loading",
] }

gilrs = { version = "0.11.0", features = ["serde-serialize"] }
kson = { path = "../kson" }
kson-rodio-sources = { path = "../kson-rodio-sources" }
mlua-bridge = "0.4.4"
mlua = { version = "0.10", features = [
    "serialize",
    "vendored",
    "lua53",
    "anyhow",
] }
three-d = { git = "https://github.com/asny/three-d.git", rev = "2683e0fea70c0c0da579550d4412880ff7fb09fd", default-features = false }
bitflags = "1"
once_cell = "1"
walkdir = "*"
log = { workspace = true }
uuid = { version = "1.2.2", features = ["serde"] }
poll-promise = { git = "https://github.com/EmbarkStudios/poll-promise", features = [
    "tokio",
] }
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
toml = "0.8.12"
reqwest = { version = "0.12", features = [
    "json",
    "native-tls-vendored",
    "blocking",
] }
three-d-asset = { version = "0.9.0", features = [
    "image",
    "png",
    "jpeg",
    "tga",
    "tiff",
] }
directories = "5.0.1"
zip = "2"
glutin = "0.32"
glutin-winit = "0.5"
glow = "0.16"
rusc_database = { path = "./rusc_database" }
itertools = { workspace = true }
kson-music-playback = { path = "../kson-music-playback" }
clap = { version = "4.3.5", features = ["derive"] }
egui_inspect = { git = 'https://github.com/Drewol/egui_inspect.git' }
sha1_smol = "1.0.0"
futures = "0.3.28"
num_cpus = "1.16.0"
encoding = "0.2.33"
kson-editor = { path = "../editor" }
serde_with = "3.8.1"
more-di = { version = "3.1.0", features = ["async"] }
bus = "2.4.1"
luals-gen = { git = "https://github.com/Drewol/luals-gen.git" }
tokio-tungstenite = "0.24.0"
schemars = "0.8.21"
futures-util = "0.3.31"
specta = { version = "1.0.5", features = ["export"] }
statrs = "0.17.1"
chrono = { version = "0.4.38", default-features = false, features = [
    "alloc",
    "clock",
    "now",
    "std",
] }
log4rs = { version = "1.3.0", features = [
    "console_appender",
    "file_appender",
    "pattern_encoder",
    "console_writer",
], default-features = false }
regex = "1.11.1"
multiplayer-protocol = { path = "../multiplayer-protocol" }
strum = { version = "*", features = ["derive"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"
include_dir = "0.7"
winit = { version = "0.30", features = ["android-native-activity", "serde"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { version = "0.30", features = ["serde"] }
rfd = "*"

[target.'cfg(unix)'.dependencies]
openssl = { version = "^0.10", features = ["vendored"] }

[lints.clippy]
arc_with_non_send_sync = "allow"

[package.metadata.bundle.bin.rusc]
name = "USC"
identifier = "dev.kson.usc"
resources = ["game/skins", "game/fonts"]

[package.metadata.bundle.bin.kson-editor]
name = "KSON-Editor"
identifier = "dev.kson.editor"

[features]
default = []
portable = []
