[package]
name = "kson-effect-param-macro"
version = "0.2.0"
edition = "2021"
description = "Macros for the kson crate"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.18"
proc-macro2 = "1.0.82"
syn = "2.0.60"
