[package]
name = "kson-music-playback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
kson = { path = "../kson" }
kson-audio = { path = "../kson-audio" }
kson-rodio-sources = { path = "../kson-rodio-sources" }
