[package]
name = "kson-rodio-sources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { workspace = true }
soundtouch = { git = 'https://github.com/Drewol/soundtouch-rs.git' }
rand = { workspace = true }


[profile.dev]
opt = "3"
