[package]
name = "kson"
description = "Rust implementation of the kson sdvx chart format."
version = "0.2.0"
authors = ["Emil Draws <emildraws@gmail.com>"]
readme = "README.md"
edition = "2021"
license = "MIT"

[dependencies]
serde = { workspace = true }
thiserror = "1"
kson-effect-param-macro = { path = "../kson-effect-param-macro" }
num-traits = "0.2"

[dev-dependencies]
clap = { version = "4.4.1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
serde_test = "1"
